{
    "name": "DronesCameraInput",
    "maps": [
        {
            "name": "Player",
            "id": "4d719194-9ec9-4dc3-b0ee-c8b95f384462",
            "actions": [
                {
                    "name": "AddDrone",
                    "type": "Button",
                    "id": "f45812df-a610-400c-8886-b2ab350237b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RemoveDrone",
                    "type": "Button",
                    "id": "01421d54-6ebd-4e5d-801f-d7a0d11f1726",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RemoveAllDrones",
                    "type": "Button",
                    "id": "b613f8b0-999f-4fa3-a584-bd37218afb73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DownLeft",
                    "type": "Button",
                    "id": "b9931175-3c55-49ae-aa1a-19f7a76143c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "40bf6550-c8f5-424a-b542-1f678ca68fb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DownRight",
                    "type": "Button",
                    "id": "558b3b4e-37ee-4984-95ea-88e630f6e3e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "5da47eaa-f01b-4216-8c61-e013105e8942",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddleCentre",
                    "type": "Button",
                    "id": "ce37c8a9-3b27-42be-8ce1-e461a3ab8128",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "75e0002c-8ebf-4194-9aff-9e0797d9f6e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UpLeft",
                    "type": "Button",
                    "id": "7c686e4c-2854-4666-a3b6-53105cc2872c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "d0555075-b157-464b-ba1f-ff2d7d4c25bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UpRight",
                    "type": "Button",
                    "id": "3fcc86dc-8d89-4b8e-8b88-10ba2db88671",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "06d730d5-5351-4435-866e-450aa81ef164",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddDrone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22921991-59db-4f59-9300-786e1288b1eb",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveDrone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47b2fe59-93d4-4893-b6ea-e6f20929d6ac",
                    "path": "<Keyboard>/numpad0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveAllDrones",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66ae04a1-f4eb-4fb4-93cb-f0fcf6b3d77a",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e885aec-8a67-4f93-bc9d-09c301735093",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d72a284-86e0-4f11-8d50-0b55da72c7f0",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a49a5485-4804-485e-8b80-d0a08ffcc338",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a97cfed-e0b7-422c-b99e-e109a3593fa7",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleCentre",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b87092c-458a-409d-846b-bfc43a631a77",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6453d4b-0489-4b27-b755-b8b2ee1ca6ca",
                    "path": "<Keyboard>/numpad7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d1ef743-7b37-4967-bf28-e712f9544560",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b56f2834-e8b0-44ec-a9f3-2eea05a88d62",
                    "path": "<Keyboard>/numpad9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}